[package]
name = "web-backend-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = { version = "23.0.0" }
serde = { version = "1" , features = ["derive"]}
serde_json = "1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
sha2 = { version = "0.10.6" }
rand = { version = "0.8.5" }